[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/scripts/PlayerSelect.gd" type="Script" id=1]
[ext_resource path="res://Menus/SelectScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/PlayerItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/angel_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/knight_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/Beserker_full.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )
transitioning = false

[node name="SelectScreen" parent="." index="0" instance=ExtResource( 2 )]

active = true

[node name="AngelPlayer" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 540, 550 )
playerTexture = ExtResource( 4 )
playerName = "Angel"
playerDescription = "The Angel is from another realm. Where it lacks in physical strength, it makes up for with massive hitpoints, and a very high speed gives them the first hit in most battles."

[node name="WarriorPlayer" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 0, -1100 )
_sections_unfolded = [ "Transform" ]
playerTexture = ExtResource( 5 )
playerName = "Warrior"
playerDescription = "A fierce human warrior from the Surface, this character has the strength to hit hard - but will they survive to make the final blow?"

[node name="BeserkerPlayer" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 0, -1100 )
_sections_unfolded = [ "Transform" ]
playerTexture = ExtResource( 6 )
playerName = "Beserker"
playerDescription = "The beserker will never let you down with the damage he will inflict on evil creatures. But they may gravely injure him while he's striking..."

[connection signal="changed" from="SelectScreen" to="." method="_on_changed"]


